--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "express-jwt-blacklist": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
