--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
