--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-select": "^3.0.8",
+    "react-toggle": "^4.1.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "socket.io-client": "^2.3.0"
